// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProjectModel should return all projects 1`] = `
Array [
  Object {
    "created": 1669029674543,
    "description": "新しいフレッシュホームページの制作過程はこちら",
    "id": 1,
    "title": "ホームページのリニューアル",
    "updated": 1669029674543,
  },
  Object {
    "created": 1669029674544,
    "description": "新しいチェックアウト フォームでユーザー エクスペリエンスを向上",
    "id": 2,
    "title": "チェックアウトフォームのリファクタリング",
    "updated": 1669029674544,
  },
  Object {
    "created": 1669029674545,
    "description": null,
    "id": 3,
    "title": "実験プロジェクト",
    "updated": 1669029674545,
  },
]
`;

exports[`ProjectModel should return project with id 1 1`] = `
Object {
  "created": 1669029674543,
  "description": "新しいフレッシュホームページの制作過程はこちら",
  "id": 1,
  "title": "ホームページのリニューアル",
  "updated": 1669029674543,
}
`;
